# OCR_HVKS

./: .env.example  .gitignore  LaTeX_PDF_Server.ipynb  OCR_API_Server - Sao chép.ipynb  OCR_API_Server.ipynb  README.md  README_GPU_SETUP.md  ocr_v3.html  pyproject.toml  requirements.txt  test_deepdoc_ocr.ipynb
colab/: run_local_src.py  vllm_server.py
deepdoc_vietocr/module/: ocr.py
deploy/: install_server.sh  start_api.sh  start_cloudflared.sh  start_sglang.sh  start_vllm.sh
deploy/systemd/: README.md  ocr-hvks-api.service  ocr-hvks-tunnel.service  sglang.service  vllm.service
local/: .env.example  config.py  extract.py  latex_server.py  ocr_server.py  vllm_client.py
local/extract_md/: 03_ThongTin_BiCao_NuocNgoai.md  04_PhapNhan_ThuongMai.md
src/ocr_hvks/: __init__.py  config.py  server.py
src/ocr_hvks/api/: app.py
src/ocr_hvks/extract/: router.py  service.py
src/ocr_hvks/extract/schemas/: 01_BanAn_QuyetDinh.md  02_ThongTin_BiCao.md
src/ocr_hvks/latex/: compile.py  normalize.py  prompts.py  router.py  service.py  templates.py
src/ocr_hvks/llm/: client.py
src/ocr_hvks/ocr/: metrics.py  pdf_loader.py  pipeline.py  prompts.py  router.py  runtime.py
ui/: ocr_v3.html
